--- a/Scheduler.Application/packages.config
+++ b/Scheduler.Application/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.Owin" version="3.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.Cors" version="3.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.FileSystems" version="3.0.1" targetFramework="net46" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net46" />
   <package id="Microsoft.Owin.StaticFiles" version="3.0.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
   <package id="Owin" version="1.0" targetFramework="net46" />
