--- a/Scheduler.Business.Implementation/Scheduler.Business.Implementation.csproj
+++ b/Scheduler.Business.Implementation/Scheduler.Business.Implementation.csproj
@@ -41,9 +41,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountService.cs" />
+    <Compile Include="AppointmentService.cs" />
     <Compile Include="AuthenticationService.cs" />
+    <Compile Include="CptService.cs" />
     <Compile Include="DBEntityExt.cs" />
+    <Compile Include="EmailService.cs" />
+    <Compile Include="EnterpriseService.cs" />
+    <Compile Include="ImageService.cs" />
+    <Compile Include="MammographyService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResourceService.cs" />
     <Compile Include="ServiceBase.cs" />
     <Compile Include="ServiceFactory.cs" />
   </ItemGroup>
